<resources>
    <string name="app_name">Game Of Mathematics</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="write_your_answer_here">Write your answer here</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="the_question_is">The question is</string>
    <string name="sorry_your_answer_is_wrong">Sorry, your answer is wrong</string>
    <string name="congratulations_the_answer_is_correct">Congratulations, the answer is correct</string>
    <string name="sorry_your_time_is_up">Sorry, your time is up!</string>
</resources>