<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/addition"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/subtraction"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/multiplication"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>