<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AdditionActivity">

    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="Score:"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="Life:"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="3"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="Time:"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="60"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/the_question_is"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_your_answer_here"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttono_shape"
            android:backgroundTint="@null"
            android:text="@string/ok"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttono_shape"
            android:backgroundTint="@null"
            android:text="@string/next"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>